// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > accessRequest > getModelAccessRequests > 200 > ok 1`] = `
{
  "accessRequests": {
    "example": "test",
  },
}
`;

exports[`routes > accessRequest > getModelAccessRequests > audit > expected call 1`] = `
{
  "example": "test",
}
`;
